INTERIM-38 Fixed long URL display in flexbox on mobile

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -1768,6 +1768,13 @@ span.date-display-single {
     width: 100%;
 }
 
+.views-field-field-uri-1 a {
+    color: #616161;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+}
+
 /* -------------------- */
 /* ## VIEWS - PEOPLE 
 /* -------------------- */
